# stream-reducer

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-cloudflare.yml  docker.yml  mirror.yml
app/: config.py  db.py  main.py  mcp_server.py  schemas.py
app/adapters/: apple_podcast.py  base.py  bilibili.py  danmaku.py  http_audio.py  registry.py  rss.py  xiaoyuzhou.py  youtube.py  ytdlp_base.py
app/api/: items.py  stats.py
app/pipeline/: graph_build.py  jsonparse.py  prompts.py  reduce_backfill.py  summarize.py
cf/: README.md
cf/migrate/: .gitignore  build_sql.py  embed_backfill.py  reconcile_schema.sql
cf/pipeline/: Dockerfile  bili_refresh.py  entrypoint.sh  llm.py  pipeline.py  requirements.txt  server.py
cf/worker/: .dev.vars.example  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
cf/worker/migrations/: 0001_init.sql  0002_item_feed.sql  0003_admin.sql  0004_item_translation.sql  0005_item_headline.sql  0006_subscription_poll_status.sql  0007_item_infographic.sql  0008_item_progress.sql  0009_subscription_folder.sql
cf/worker/src/: auth.ts  db.ts  env.ts  index.ts
docs/: index.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: FolderSection.tsx  GraphCanvas.tsx  Highlightable.tsx  ItemCard.tsx  Layout.tsx  Mindmap.tsx  NodePanel.tsx  badges.tsx  ui.tsx
frontend/src/lib/: api.ts  auth.ts  (+3 more)
mirror/: export.py  sync.py
tests/: test_graph_build.py  test_proxy_rotation.py
(+43 files in other folders)
