[project]
name = "stream-reduce"
version = "0.2.0"
description = "Self-hosted media summarizer: video/audio -> source-traceable summaries"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "rq>=2.0.0",
    "apscheduler>=3.11.0",
    "feedparser>=6.0.11",
    "yt-dlp>=2025.1.1",
    "python-multipart>=0.0.12",
    "opencc-python-reimplemented>=0.1.7",
    "fastmcp>=3.4.0",
]

[project.scripts]
stream-reduce = "app.main:run"
stream-reduce-worker = "worker.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "worker"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "UP042"]

[tool.ruff.lint.per-file-ignores]
"app/pipeline/prompts.py" = ["E501"]
"tests/*" = ["E501"]
